task1/test_results_no_defects/infer_test/overrun_st/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/overrun_st.c:126: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  124. 	int buf5[6];
  125. 	int *pbuf[5] = {buf1, buf2, buf3, buf4, buf5};
  126. 	pbuf[4][5] = 1; /*Tool not should detect this line as error*/ /*No ERROR: buffer overrun */
        ^
  127. }
  128. 

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/overrun_st.c:183: error: Buffer Overrun L3
  Offset: [-4, 4] Size: 5.
  181. 	int index;
  182. 	index = rand() % 5;
  183. 	buf[index] = 1; /*Tool not should detect this line as error*/ /*No ERROR: buffer overrun */
        ^
  184.         sink = buf[idx];
  185. }

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/overrun_st.c:251: error: Buffer Overrun L2
  Offset: [3, 6] Size: 5.
  249. 	int indexes[4] = {3, 5, 4, 6};
  250. 	int index = 2;
  251. 	buf[indexes[index]] = 1; /*Tool not should detect this line as error*/ /*No ERROR: buffer overrun */
        ^
  252.         sink = buf[idx];
  253. }

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/overrun_st.c:443: error: Buffer Overrun L3
  Offset: [-4, 4] Size: 5.
  441. 	p = buf;
  442. 	index = rand() % 5;
  443. 	*(p + index) = 1; /*Tool not should detect this line as error*/ /*No ERROR: buffer overrun */
        ^
  444. }
  445. 

#4
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/overrun_st.c:517: error: Buffer Overrun L2
  Offset: [3, 6] Size: 5.
  515. 	int index = 2;
  516. 	p = buf;
  517. 	*(p + indexes[index]) = 1; /*Tool not should detect this line as error*/ /*No ERROR: buffer overrun */
        ^
  518. }
  519. 

#5
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/overrun_st.c:622: error: Buffer Overrun L4
  Offset: [0, +oo] Size: 5.
  620. 	for (i = 0; i < 5; i ++)
  621. 	{
  622. 		*p = 1;
         ^
  623. 		p ++; /*Tool not should detect this line as error*/ /*No ERROR: buffer overrun */
  624. 	}

#6
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/overrun_st.c:728: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  726. 	int buf5[] = {1, 2, 3, 4, 5, 6};
  727. 	int *pbuf[] = {buf1, buf2, buf3, buf4, buf5};
  728. 	pbuf[4][5] = 1; /*Tool not should detect this line as error*/ /*No ERROR: buffer overrun */
        ^
  729. }
  730. 

#7
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/overrun_st.c:777: error: Buffer Overrun L5
  Offset: [-oo, +oo] Size: 5 by call to `overrun_st_001`.
  775. 	if (vflag == 1 || vflag ==888)
  776. 	{
  777. 		overrun_st_001();
         ^
  778. 	}
  779. 

Found 8 issues
            Issue Type(ISSUED_TYPE_ID): #
  Buffer Overrun L3(BUFFER_OVERRUN_L3): 2
  Buffer Overrun L2(BUFFER_OVERRUN_L2): 2
  Buffer Overrun L1(BUFFER_OVERRUN_L1): 2
  Buffer Overrun L5(BUFFER_OVERRUN_L5): 1
  Buffer Overrun L4(BUFFER_OVERRUN_L4): 1
